fix: eslint and prettier run and code fixes

--- a/src/docs/5.28.x/infrastructure/aws/configure-aws-credentials.mdx
+++ b/src/docs/5.28.x/infrastructure/aws/configure-aws-credentials.mdx
@@ -107,29 +107,33 @@ If you don't have one, please refer to the [previous step](../../infrastructure/
 
 In order to deploy your Webiny project in a more controlled and secure manner, you can utilize our **Deploy Webiny Project** AWS CloudFormation template. Via three IAM user groups, the template deploys necessary ([least-privilege](https://en.wikipedia.org/wiki/Principle_of_least_privilege)) set of permissions into your AWS account, which also automatically get linked with a preexisting Amazon IAM user of your choosing (the user you plan to use upon running deployments).
 
-
 To get started, simply click [here](https://console.aws.amazon.com/cloudformation/home?#/stacks/create/review?templateURL=https://webiny-public.s3.us-east-2.amazonaws.com/cloudformation/DEPLOY_WEBINY_PROJECT_CF_TEMPLATE.yaml&stackName=DeployWebinyProject).
 
 <Alert type={"info"}>
-  Before deploying the AWS CloudFormation template, you might want to inspect it. You can do that by visiting our <a target="_blank1" href={"https://github.com/webiny/webiny-js/blob/stable/docs/DEPLOY_WEBINY_PROJECT_CF_TEMPLATE.yaml"}>GitHub repository</a>.
+  Before deploying the AWS CloudFormation template, you might want to inspect it. You can do that by
+  visiting our{" "}
+  <a
+    target="_blank1"
+    href={
+      "https://github.com/webiny/webiny-js/blob/stable/docs/DEPLOY_WEBINY_PROJECT_CF_TEMPLATE.yaml"
+    }
+  >
+    GitHub repository
+  </a>
+  .
 </Alert>
 
-[//]: # (Commented out as the provided info and screenshots are outdated.)
-[//]: # (![aws-cloudformation-create-stack]&#40;./assets/configure-aws-credentials/create-stack.gif&#41;)
-
-[//]: # ()
-[//]: # (The resource creation will take a few minutes. After completion, you will see the completion logs:)
-
-[//]: # ()
-[//]: # (![aws-cloudformation-step-5]&#40;./assets/configure-aws-credentials/cloudformation-step-5.png&#41;)
-
-[//]: # ()
-[//]: # (Afterwards, you can check out the newly created resources in the [IAM service panel]&#40;https://console.aws.amazon.com/iamv2/home?#/users&#41;.)
-
-[//]: # (Also, if you head over to the previously created user &#40;`webiny-cli` in our case&#41;, you will see the attached policy and group:)
-
-[//]: # ()
-[//]: # (![aws-cloudformation-step-6]&#40;./assets/configure-aws-credentials/cloudformation-step-6.png&#41;)
+[//]: # "Commented out as the provided info and screenshots are outdated."
+[//]: # "![aws-cloudformation-create-stack](./assets/configure-aws-credentials/create-stack.gif)"
+[//]: #
+[//]: # "The resource creation will take a few minutes. After completion, you will see the completion logs:"
+[//]: #
+[//]: # "![aws-cloudformation-step-5](./assets/configure-aws-credentials/cloudformation-step-5.png)"
+[//]: #
+[//]: # "Afterwards, you can check out the newly created resources in the [IAM service panel](https://console.aws.amazon.com/iamv2/home?#/users)."
+[//]: # "Also, if you head over to the previously created user (`webiny-cli` in our case), you will see the attached policy and group:"
+[//]: #
+[//]: # "![aws-cloudformation-step-6](./assets/configure-aws-credentials/cloudformation-step-6.png)"
 
 ## Step 3: Configure the Programmatic Access
 
