--- a/src/docs/5.31.x/core-development-concepts/extending-and-customizing/add-custom-route-to-existing-lambda.mdx
+++ b/src/docs/5.31.x/core-development-concepts/extending-and-customizing/add-custom-route-to-existing-lambda.mdx
@@ -85,31 +85,31 @@ import { createApiGatewayRoute } from "@webiny/handler-aws";
 
 // existing handler
 export const handler = createHandler({
-    plugins: [
-        // at the end of the plugins array you need to create a new API Gateway route
-        createApiGatewayRoute(({ onPost, onOptions, context }) => {
-          onPost("/my-custom-path", async (request, reply) => {
-              // do something with request
-              if (request.body === null) {
-                  return reply.send({
-                      somethingIsWrong: true
-                  });
-              }
-              return reply.send({
-                  output: true,
-                  someOtherVariable: "xyz"
-              });
+  plugins: [
+    // at the end of the plugins array you need to create a new API Gateway route
+    createApiGatewayRoute(({ onPost, onOptions, context }) => {
+      onPost("/my-custom-path", async (request, reply) => {
+        // do something with request
+        if (request.body === null) {
+          return reply.send({
+            somethingIsWrong: true
           });
-          onOptions("/my-custom-path", async (_, reply) => {
-              return reply
-                  .headers({
-                      myCustomOptionHeader: "yes"
-                  })
-                  .send({})
-                  .hijack();
-          });
-      })
-    ]
+        }
+        return reply.send({
+          output: true,
+          someOtherVariable: "xyz"
+        });
+      });
+      onOptions("/my-custom-path", async (_, reply) => {
+        return reply
+          .headers({
+            myCustomOptionHeader: "yes"
+          })
+          .send({})
+          .hijack();
+      });
+    })
+  ]
 });
 ```
 
@@ -123,42 +123,42 @@ import { createApiGatewayRoute } from "@webiny/handler-aws";
 
 // existing handler
 export const handler = createHandler({
-    plugins: [
-        // at the end of the plugins array you need to create a new API Gateway route
-        createApiGatewayRoute(({ onPost, onOptions }) => {
-          onPost("/my-custom-path/:id", async (request, reply) => {
-              // the parameters are available on request.params object
-              const { id } = request.params;
-              return reply.send({
-                  id
-              });
-          });
-          onOptions("/my-custom-path/:id", async (request, reply) => {
-              const { id } = request.params;
-              return reply
-                  .headers({
-                      myCustomOptionHeader: "yes",
-                        id,
-                  })
-                  .send({})
-                  .hijack();
-          });
-      })
-    ]
+  plugins: [
+    // at the end of the plugins array you need to create a new API Gateway route
+    createApiGatewayRoute(({ onPost, onOptions }) => {
+      onPost("/my-custom-path/:id", async (request, reply) => {
+        // the parameters are available on request.params object
+        const { id } = request.params;
+        return reply.send({
+          id
+        });
+      });
+      onOptions("/my-custom-path/:id", async (request, reply) => {
+        const { id } = request.params;
+        return reply
+          .headers({
+            myCustomOptionHeader: "yes",
+            id
+          })
+          .send({})
+          .hijack();
+      });
+    })
+  ]
 });
 ```
 
 In the `createApiGatewayRoute` method callback, there are multiple properties available:
 
-* `onPost` - register a POST method route
-* `onOptions` - register an OPTIONS method route
-* `onDelete` - register a DELETE method route
-* `onPatch` - register a PATCH method route
-* `onGet` - register a GET method route
-* `onHead` - register a HEAD method route
-* `onPut` - register a PUT method route
-* `onAll` - register a route which will catch all the existing methods
-* `context` - our Webiny internal context with all our applications attached to it
+- `onPost` - register a POST method route
+- `onOptions` - register an OPTIONS method route
+- `onDelete` - register a DELETE method route
+- `onPatch` - register a PATCH method route
+- `onGet` - register a GET method route
+- `onHead` - register a HEAD method route
+- `onPut` - register a PUT method route
+- `onAll` - register a route which will catch all the existing methods
+- `context` - our Webiny internal context with all our applications attached to it
 
 The [`request`](https://www.fastify.io/docs/latest/Reference/Request/) and [`reply`](https://www.fastify.io/docs/latest/Reference/Reply/) objects are the original ones from the Fastify, so you can look into their documentation about what they contain and what you can use.
 
