--- a/src/docs/5.34.x/core-development-concepts/extending-and-customizing/customizing-the-error-output.mdx
+++ b/src/docs/5.34.x/core-development-concepts/extending-and-customizing/customizing-the-error-output.mdx
@@ -1,5 +1,5 @@
 ---
-title: Customizing the Error Output 
+title: Customizing the Error Output
 description: Learn how to set a custom error handler to modify the error output
 ---
 
@@ -29,18 +29,18 @@ There is a plugin class, `ModifyFastifyPlugin`, which user can construct, or the
 ```typescript
 import { ModifyFastifyPlugin } from "@webiny/handler";
 
-const plugin = new ModifyFastifyPlugin((instance) => {
-    instance.setErrorHandler(async (error, request, reply) => {
-        return reply
-            .status(500)
-            .headers({
-                "Cache-Control": "no-store"
-            })
-            .send({
-                ...error,
-                myCustomErrorClassHandler: true
-            });
-    });
+const plugin = new ModifyFastifyPlugin(instance => {
+  instance.setErrorHandler(async (error, request, reply) => {
+    return reply
+      .status(500)
+      .headers({
+        "Cache-Control": "no-store"
+      })
+      .send({
+        ...error,
+        myCustomErrorClassHandler: true
+      });
+  });
 });
 ```
 
@@ -49,18 +49,18 @@ const plugin = new ModifyFastifyPlugin((instance) => {
 ```typescript
 import { createModifyFastifyPlugin } from "@webiny/handler";
 
-const plugin = createModifyFastifyPlugin((instance) => {
-    instance.setErrorHandler(async (error, request, reply) => {
-        return reply
-            .status(500)
-            .headers({
-                "Cache-Control": "no-store"
-            })
-            .send({
-                ...error,
-                myCustomErrorFunctionHandler: true
-            });
-    });
+const plugin = createModifyFastifyPlugin(instance => {
+  instance.setErrorHandler(async (error, request, reply) => {
+    return reply
+      .status(500)
+      .headers({
+        "Cache-Control": "no-store"
+      })
+      .send({
+        ...error,
+        myCustomErrorFunctionHandler: true
+      });
+  });
 });
 ```
 
@@ -70,13 +70,12 @@ In both cases of creating the Fastify modifier plugin, users need to register th
 
 ```typescript
 export const handler = createHandler({
-    plugins: [
-        // ... register the plugin in the plugins array of the createHandler
-        plugin,
-    ],
+  plugins: [
+    // ... register the plugin in the plugins array of the createHandler
+    plugin
+  ]
 });
 ```
-
 
 <Alert type="warning">
 
