--- a/src/docs/5.34.x/headless-cms/basics/using-graphql-api-filtering.mdx
+++ b/src/docs/5.34.x/headless-cms/basics/using-graphql-api-filtering.mdx
@@ -18,7 +18,6 @@ In this article we will go through simple filtering of all of our built-in field
 
 In all of our examples we will use an `Article` model which has all the available fields in it.
 
-
 <Alert type="info">
 
 When filtering by equal value, there is no `eq` or `equal` or anything similar, like in other filters. You simply use the field name and the value you want to filter by.
@@ -32,15 +31,13 @@ When filtering by equal value, there is no `eq` or `equal` or anything similar, 
 The `Boolean` field is the simplest one. It has only two possible values: `true` and `false`.
 
 Available filters are:
-* `equal`
-* `not`
+
+- `equal`
+- `not`
 
 ```graphql
 query {
-  listArticles(where: {
-    isImportant: true
-    isImportant_not: false
-  }) {
+  listArticles(where: { isImportant: true, isImportant_not: false }) {
     data {
       id
       title
@@ -53,31 +50,34 @@ query {
 ### The Number Field
 
 The `Number`field has the following filters:
-* `equal`
-* `not`
-* `in`
-* `not_in`
-* `lt`
-* `lte`
-* `gt`
-* `gte`
-* `between`
-* `not_between`
+
+- `equal`
+- `not`
+- `in`
+- `not_in`
+- `lt`
+- `lte`
+- `gt`
+- `gte`
+- `between`
+- `not_between`
 
 ```graphql
 query {
-  listArticles(where: {
-    priority: 1
-    priority_not: 2
-    priority_in: [2, 3, 4, 5]
-    priority_not_in: [21, 31, 41, 51]
-    priority_lt: 501
-    priority_lte: 500
-    priority_gt: 0
-    priority_gte: 1
-    priority_between: [1, 500]
-    priority_not_between: [501, 1000]
-  }) {
+  listArticles(
+    where: {
+      priority: 1
+      priority_not: 2
+      priority_in: [2, 3, 4, 5]
+      priority_not_in: [21, 31, 41, 51]
+      priority_lt: 501
+      priority_lte: 500
+      priority_gt: 0
+      priority_gte: 1
+      priority_between: [1, 500]
+      priority_not_between: [501, 1000]
+    }
+  ) {
     data {
       id
       title
@@ -91,27 +91,29 @@ query {
 
 The `DateTime` field has the following filters:
 
-* `equal`
-* `not`
-* `in`
-* `not_in`
-* `lt`
-* `lte`
-* `gt`
-* `gte`
+- `equal`
+- `not`
+- `in`
+- `not_in`
+- `lt`
+- `lte`
+- `gt`
+- `gte`
 
 ```graphql
 query {
-  listArticles(where: {
-    date: "2023-01-01"
-    date_not: "2023-02-01"
-    date_in: ["2023-01-01", "2023-01-02", "2023-01-03", "2023-01-04"]
-    date_not_in: ["2023-02-01", "2023-03-01"]
-    date_lt: "2024-02-02"
-    date_lte: "2024-02-01"
-    date_gt: "2023-01-01"
-    date_gte: "2023-01-02"
-  }) {
+  listArticles(
+    where: {
+      date: "2023-01-01"
+      date_not: "2023-02-01"
+      date_in: ["2023-01-01", "2023-01-02", "2023-01-03", "2023-01-04"]
+      date_not_in: ["2023-02-01", "2023-03-01"]
+      date_lt: "2024-02-02"
+      date_lte: "2024-02-01"
+      date_gt: "2023-01-01"
+      date_gte: "2023-01-02"
+    }
+  ) {
     data {
       id
       title
@@ -121,28 +123,29 @@ query {
 }
 ```
 
-
 ### The Text Field
 
 The `Text` field has the following filters:
 
-* `equal`
-* `not`
-* `in`
-* `not_in`
-* `contains`
-* `not_contains`
+- `equal`
+- `not`
+- `in`
+- `not_in`
+- `contains`
+- `not_contains`
 
 ```graphql
 query {
-  listArticles(where: {
-    title: "Webiny"
-    title_not: "Not serverless"
-    title_in: ["Webiny", "Serverless", "DynamoDB", "S3"]
-    title_not_in: ["Server", "On-Premise"]
-    title_contains: "serverless"
-    title_not_contains: "server"
-  }) {
+  listArticles(
+    where: {
+      title: "Webiny"
+      title_not: "Not serverless"
+      title_in: ["Webiny", "Serverless", "DynamoDB", "S3"]
+      title_not_in: ["Server", "On-Premise"]
+      title_contains: "serverless"
+      title_not_contains: "server"
+    }
+  ) {
     data {
       id
       title
@@ -155,15 +158,12 @@ query {
 
 The `LongText` field has the following filters:
 
-* `contains`
-* `not_contains`
+- `contains`
+- `not_contains`
 
 ```graphql
 query {
-  listArticles(where: {
-    description_contains: "serverless"
-    description_not_contains: "server"
-  }) {
+  listArticles(where: { description_contains: "serverless", description_not_contains: "server" }) {
     data {
       id
       description
@@ -184,19 +184,20 @@ The `File` field has no filters.
 
 The `Reference` field has the following filters:
 
-* `id` (`equal`)
-* `id_not`
-* `id_in`
-* `id_not_in`
-* `entryId_equal`
-* `entryId_not`
-* `entryId_in`
-* `entryId_not_in`
+- `id` (`equal`)
+- `id_not`
+- `id_in`
+- `id_not_in`
+- `entryId_equal`
+- `entryId_not`
+- `entryId_in`
+- `entryId_not_in`
 
 ```graphql
 query {
-  listArticles(where: {
-    category: {
+  listArticles(
+    where: {
+      category: {
         id: "abc#0001"
         id_not: "abc#0002"
         id_in: ["abc#0001", "abc#0003", "abc#0004"]
@@ -205,8 +206,9 @@ query {
         entryId_not: "abc"
         entryId_in: ["abc", "abc", "abc"]
         entryId_not_in: ["abc"]
+      }
     }
-  }) {
+  ) {
     data {
       id
       category {
@@ -218,18 +220,15 @@ query {
 }
 ```
 
-
 When filtering with the `id`, you will filter by that exact ID, which means Entry ID + Revision. If you want to filter for any revision of the entry you need, you will need to use the `entryId` filter.
-
 
 <Alert type="warning">
 
 If you want to filter by a referenced field title value, first you must run the query on that referenced model and then use the result set from it in your main query.
-  
+
 The reason for this is mainly about the amount of referenced entries we would need to load to be able to filter by a referenced field.
 
 </Alert>
-
 
 ### The Object Field
 
@@ -237,19 +236,12 @@ The `Object` field has all the filters available for the which ever field was in
 
 ```graphql
 query {
-  listArticles(where: {
-    seo: {
-        title: {
-            title_contains: "Webiny"
-        },
-        priority: {
-            priority_gte: 100
-        }
-    }
-  }) {
+  listArticles(
+    where: { seo: { title: { title_contains: "Webiny" }, priority: { priority_gte: 100 } } }
+  ) {
     seo {
-        title
-        priority
+      title
+      priority
     }
   }
 }
