--- a/src/docs/shared/release-notes/5.34.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.0/changelog.mdx
@@ -22,7 +22,7 @@ This is a powerful feature to streamline creation of your pages, and save a lot 
 
 ### Page Elements: A Brand New Page Rendering Engine ([#2898](https://github.com/webiny/webiny-js/pull/2898))
 
-<Image src={pe} title={"Page Elements: A Brand New Page Rendering Engine"} shadow={false}/>
+<Image src={pe} title={"Page Elements: A Brand New Page Rendering Engine"} shadow={false} />
 
 With this release, we are introducing a brand new page rendering engine called **Page Elements**!
 
@@ -43,9 +43,9 @@ For new Webiny projects, the new rendering engine is enabled by default. No extr
 For existing projects, users have the option to [migrate to the new rendering engine](/docs/release-notes/5.34.0/page-builder-pe-rendering-engine-migration) over time, once it's convenient
 for them. Until then, their projects will still use the now _legacy_ rendering engine, which we plan to support until the end of June 2023. After that, the legacy rendering engine will be considered deprecated and will receive no further support from the Webiny team.
 
-When it comes to the migration guide, this is something we plan to publish over the next following days. Stay tuned for more information on this topic. 
+When it comes to the migration guide, this is something we plan to publish over the next following days. Stay tuned for more information on this topic.
 
-At the end of the day, we're very excited about this next level in the Page Builder application's evolution and how the new rendering engine will enable Webiny users to provide the best possible experience to their website's visitors. 
+At the end of the day, we're very excited about this next level in the Page Builder application's evolution and how the new rendering engine will enable Webiny users to provide the best possible experience to their website's visitors.
 
 ### Rendering Pages In External (non-Webiny) Projects
 
@@ -120,7 +120,7 @@ Learn more about project applications and project organization in general, in th
 
 </Alert>
 
-[//]: # (For more information about this new feature, please visit the [Application Aliases]&#40;#&#41; section of the existing [Webiny CLI]&#40;/docs/{exact:5.34.x}/core-development-concepts/basics/webiny-cli&#41; article.)
+[//]: # "For more information about this new feature, please visit the [Application Aliases](#) section of the existing [Webiny CLI](/docs/{exact:5.34.x}/core-development-concepts/basics/webiny-cli) article."
 
 ### Feature Flags ([#2897](https://github.com/webiny/webiny-js/pull/2897))
 
@@ -162,7 +162,7 @@ if (featureFlags.myComplexFeatureFlag.a === 1) {
 return false;
 ```
 
-[//]: # (To learn more about feature flags, please visit the related [Feature Flags]&#40;#&#41; article.)
+[//]: # "To learn more about feature flags, please visit the related [Feature Flags](#) article."
 
 ### Environment Variables via `webiny.project.ts` ([#2896](https://github.com/webiny/webiny-js/pull/2896))
 
@@ -191,7 +191,7 @@ export default {
 
 Note that the `WEBINY_` prefixed variables will be available in your backend (AWS Lambda) application code, and the `REACT_APP_` prefixed ones in your frontend (React) application code.
 
-[//]: # (For more information about this new feature, please visit the updated [Environment Variables]&#40;/docs/{exact:5.34.x}/core-development-concepts/basics/environment-variables&#41; article.)
+[//]: # "For more information about this new feature, please visit the updated [Environment Variables](/docs/{exact:5.34.x}/core-development-concepts/basics/environment-variables) article."
 
 ### Updated Lifecycle Events ([#2615](https://github.com/webiny/webiny-js/pull/2615))
 
